teamspeak-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak
  labels:
    app: teamspeak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamspeak
  template:
    metadata:
      labels:
        app: teamspeak
    spec:
      containers:
      - name: teamspeak
        image: ghcr.io/automagw/teamspeak-app:latest
        ports:
        - containerPort: 9987
        - containerPort: 30033
        - containerPort: 10011
        volumeMounts:
        - name: teamspeak-data
          mountPath: /var/ts3server
      volumes:
      - name: teamspeak-data
        persistentVolumeClaim:
          claimName: teamspeak-pvc
      imagePullSecrets:
      - name: ghcr-secret
