teamspeak-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamspeak-service
spec:
  type: LoadBalancer
  selector:
    app: teamspeak
  ports:
    - name: voice
      port: 9987
      protocol: UDP
      targetPort: 9987
    - name: file
      port: 30033
      protocol: TCP
      targetPort: 30033
    - name: query
      port: 10011
      protocol: TCP
      targetPort: 10011
